# FastAPI-Starter-Template

./: .dockerignore  .env.docker.example  .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  Dockerfile.dev  Dockerfile.second  README.md  REDIS_IMPLEMENTATION.md  docker-compose.cache.yml  docker-compose.yml  pyproject.toml  requirements.txt  sample_endpoints.http
alembic/: env.py
alembic/versions/: 3c242e501ef7_initial_migration.py  58328a446c4a_add_is_staff_field_to_user_model.py
app/: main.py  utils.py
app/api/: deps.py  v1_router.py
app/api/v1/: admin.py  auth.py  staff.py  user.py
app/core/: config.py  oauth.py  redis.py  security.py
app/crud/: user.py
app/db/: session.py
app/models/: user.py
app/schemas/: common.py  user.py
endpoints_test/: api.http
scripts/: create_superuser.py  docker-setup.sh  entrypoint.sh  start-backend.sh
tests/: api.http
